# AdobeExpand

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  main.yml
ext/: README.md
src/premiere/: WebM_Premiere_Codecs.cpp  WebM_Premiere_Codecs.h  WebM_Premiere_Export.cpp  WebM_Premiere_Export.h  WebM_Premiere_Export_Params.cpp  WebM_Premiere_Export_Params.h  WebM_Premiere_Import.cpp  WebM_Premiere_Import.h  WebM_Premiere_Import_PiPL.r  WebM_Premiere_NVENC.cpp  WebM_Premiere_NVENC.h  WebM_Premiere_Opus.cpp  WebM_Premiere_Opus.h  WebM_Premiere_SVT-AV1.cpp  WebM_Premiere_SVT-AV1.h  WebM_Premiere_VPL.cpp  WebM_Premiere_VPL.h  WebM_Premiere_Vorbis.cpp  WebM_Premiere_Vorbis.h  WebM_Premiere_aom.cpp  WebM_Premiere_aom.h  WebM_Premiere_libvpx.cpp  WebM_Premiere_libvpx.h
vc/vc16/: WebM.sln  WebM_Premiere.vcxproj
vc/vc16/ext/: libogg_static.vcxproj  libvorbis_static.vcxproj  libvpl.vcxproj  libwebm.vcxproj
vc/vc16/ext/SVT-AV1_x64/: ReadMe.txt
vc/vc16/ext/aom_build/: aom_av1_common.vcxproj  aom_av1_common_avx2_intrinsics.vcxproj  aom_av1_common_sse2_intrinsics.vcxproj  aom_av1_common_sse4_intrinsics.vcxproj  aom_av1_common_ssse3_intrinsics.vcxproj  aom_av1_decoder.vcxproj  aom_av1_encoder.vcxproj  aom_av1_encoder_avx2_intrinsics.vcxproj  aom_av1_encoder_sse2.vcxproj  aom_av1_encoder_sse2_intrinsics.vcxproj  aom_av1_encoder_sse3_intrinsics.vcxproj  aom_av1_encoder_sse42_intrinsics.vcxproj  aom_av1_encoder_sse4_intrinsics.vcxproj  aom_av1_encoder_ssse3.vcxproj  aom_av1_rc.vcxproj  aom_mem.vcxproj  (+22 more)
xcode/xcode12/WebM_Premiere.xcodeproj/: project.pbxproj
(+47 files in other folders)
